--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "date-fns": "^4.1.0",
         "express": "^4.18.2",
         "socket.io": "^4.7.2"
     },
