--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "date-fns": "^4.1.0",
         "express": "^4.18.2",
+        "puppeteer": "^24.34.0",
         "socket.io": "^4.7.2"
     },
     "devDependencies": {
